# lang-bot

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .sops.yaml  CLAUDE.md  CODE_REVIEW.md  DOCUMENTATION_GUIDE.md  Dockerfile  GITHUB_SETUP.md  Makefile  PROJECT_STATUS.md  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  secrets.env
.agents/: README.md
.claude/agents/: code-reviewer.md  devops-engineer.md  documentation-agent.md  refactor-cleaner.md  system-architect.md
.claude/rules/: README.md  architecture.md  constraints.md  delegation.md  deployment.md  development.md  documentation.md  testing.md
.github/workflows/: deploy.yml
bot/: __main__.py
bot/config/: logging_config.py  settings.py
bot/core/: card_scheduler.py  constants.py  message_categories.py  spaced_repetition.py
bot/database/: base.py  engine.py
bot/messages/: __init__.py  ai.py  cards.py  common.py  decks.py  exercises.py  learning.py  photo_text.py  start.py  statistics.py  translation.py  vocabulary.py
bot/services/: ai_service.py  card_service.py  conversation_service.py  deck_service.py  exercise_service.py  learning_service.py  (+5 more)
docs/: README.md
migrations/: env.py
scripts/: init_db.py  seed_data.py
tests/: conftest.py  test_card_multi_deck.py  test_conversation_repo.py  test_conversation_service.py  test_deck_active.py  test_exercise_service.py  test_greek_helpers.py  test_language_detector.py  test_sentence_analysis.py  test_translation_detector.py  test_translation_messages.py
(+71 files in other folders)
